--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ features = [
     "Win32_System_LibraryLoader",
     "Win32_Graphics_Gdi",
     "Win32_System_DataExchange",
-    "Win32_System_Memory"
+    "Win32_System_Memory",
+    "Win32_UI_Input_KeyboardAndMouse"
 ]
