--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ features = [
     "Win32_Graphics_Gdi",
     "Win32_System_DataExchange",
     "Win32_System_Memory",
-    "Win32_UI_Input_KeyboardAndMouse"
+    "Win32_UI_Input_KeyboardAndMouse",
+    "Win32_System_Ole",
 ]
