--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "clippers"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+memmap2 = "0.8.0"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.windows]
