--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.31", features = ["serde"] }
-serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.107"
+fuzzy-matcher = "0.3.7"
 sled = "0.34.7"
 
 [dependencies.windows]
