--- a/libclippers/Cargo.toml
+++ b/libclippers/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "clippers"
+name = "libclippers"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.31", features = ["serde"] }
 fuzzy-matcher = "0.3.7"
+log = "0.4.20"
 sled = "0.34.7"
 
 [dependencies.windows]
