--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,9 +14,12 @@ rust-version = "1.60"
 tauri-build = { version = "1.4.1", features = [] }
 
 [dependencies]
+libclippers = { path = "../libclippers" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.0", features = [] }
+env_logger = "0.10.0"
+log = "0.4.20"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
