--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.4.1", features = [] }
 libclippers = { path = "../libclippers" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.0", features = [] }
+tauri = "1.5.0"
 env_logger = "0.10.0"
 log = "0.4.20"
 
