--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.20"
 serde = { version = "1.0.188", features = ["derive"] }
 serde-wasm-bindgen = "0.6.0"
+sled = "0.34.7"
 wasm-bindgen = "0.2.87"
+wasm-logger = "0.2.0"
 web-sys = "0.3.64"
 yew = { version = "0.21.0", features = ["csr"] }
