--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,7 +14,7 @@ rust-version = "1.60"
 tauri-build = { version = "1.4.1", features = [] }
 
 [dependencies]
-libclippers = { path = "../libclippers" }
+libclippers = { path = "../libclippers", features = ["listener"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.0", features = [] }
