--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libclippers = { path = "../libclippers" }
 log = "0.4.20"
 sled = "0.34.7"
 wasm-bindgen = "0.2.87"
